# recourse

./: .clinerules  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mcp-serve.sh  package-lock.json  package.json  playwright.config.ts  recourseOS_idea.md  server.json  vitest.config.ts  wrangler.jsonc
action/: README.md  action.yml
demo/: README.md  run-all.sh
docs/: 404.html  about.html  agent-interface.html  agent-interface.md  attestation-log-format.md  attestation-protocol-design.html  attestation-protocol-design.md  brand.html  changelog.html  console.html  cross-action-analysis.html  depth-advantage.html  depth-advantage.md  docs.html  enforcement-gateway.md  go-sdk.html  golden-fixtures.html  golden-fixtures.md  iam-session-broker.md  index.html  live-aws-tests.html  live-aws-tests.md  mcp-directory-submission.md  mcp-gateway.md  mcp-setup.html  mcp-setup.md  mcp_arch_diagram.html  multi-agent-scaling-roadmap.md  playground.html  public-boundaries.html  public-boundaries.md  resource-coverage.html  resource-coverage.md  schema-gaps.html  schema-gaps.md  site.css  state-schema-migration-guide.md  test-enhancement-plan.md  verification-protocol-v1.md
integrations/llama-recourse/: README.md  pyproject.toml  test_integration.py
integrations/llama-recourse/src/llama_recourse/: __init__.py  tools.py
recourse-go/: README.md  SPEC_AMBIGUITIES.md  attest  go.mod
schemas/: attestation.v1.json  key-registry.v1.json
scripts/: evaluate-bitnet.ts  measure-production-accuracy.ts  train-bitnet.ts
src/: agent-cli.ts  cli.ts
src/core/: index.ts  (+6 more)
(+338 files in other folders)
