[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-recourse"
version = "0.1.0"
description = "LlamaIndex tools for RecourseOS - evaluate consequences before destructive actions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "RecourseOS", email = "hello@recourseos.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["llamaindex", "llama-index", "recourse", "terraform", "mcp", "ai-safety", "agents"]
dependencies = [
    "llama-index-core>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://recourseos.dev"
Repository = "https://github.com/recourseOS/recourse"
Documentation = "https://recourseos.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_recourse"]
